--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -307,13 +307,15 @@
       {%- render 'cart-drawer' -%}
     {%- endif -%}
 
-    {% sections 'header-group' %}
-
-    <main id="MainContent" class="content-for-layout focus-none" role="main" tabindex="-1">
-      {{ content_for_layout }}
-    </main>
-
-    {% sections 'footer-group' %}
+  <div id="smooth-wrapper">
+    <div id="smooth-content">
+      {% sections 'header-group' %}
+      <main id="MainContent"...>
+        {{ content_for_layout }}
+      </main>
+      {% sections 'footer-group' %}
+    </div>
+  </div>
 
     <ul hidden>
       <li id="a11y-refresh-page-message">{{ 'accessibility.refresh_page' | t }}</li>
@@ -377,5 +379,7 @@
     {%- if settings.cart_type == 'drawer' -%}
       <script src="{{ 'cart-drawer.js' | asset_url }}" defer="defer"></script>
     {%- endif -%}
+
+    <script src="{{ 'scroll-smoother-init.js' | asset_url }}" defer="defer"></script>
   </body>
 </html>
