--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -310,7 +310,7 @@
   <div id="smooth-wrapper">
     <div id="smooth-content">
       {% sections 'header-group' %}
-      <main id="MainContent"...>
+    <main id="MainContent" class="content-for-layout focus-none" role="main" tabindex="-1">
         {{ content_for_layout }}
       </main>
       {% sections 'footer-group' %}
