feat: Add a new horizontal scroller section with customizable image panels and GSAP-powered scroll animation.

--- a/assets/horizontal-scroller.css
+++ b/assets/horizontal-scroller.css
@@ -9,6 +9,7 @@
 .horizontal-scroller .scroller-wrapper {
   display: flex;
   width: fit-content;
+  will-change: transform;
 }
 
 .horizontal-scroller .content {
