--- a/sections/large-image-section.liquid
+++ b/sections/large-image-section.liquid
@@ -5,9 +5,6 @@
     --bg-color: {{ section.settings.bg_color }};
     --text-color: {{ section.settings.text_color }};
   }
-  #shopify-section-{{ section.id }} .large-image-wrapper {
-    height: {{ section.settings.image_height }}vh;
-  }
 {%- endstyle -%}
 
 <div class="large-image-section">
@@ -33,34 +30,11 @@
       {%- endif -%}
     </div>
   </div>
-
-  <div class="large-image-wrapper">
-    {%- if section.settings.image != blank -%}
-      {{
-        section.settings.image
-        | image_url: width: 3000
-        | image_tag:
-          loading: 'lazy',
-          width: section.settings.image.width,
-          height: section.settings.image.height,
-          sizes: '100vw',
-          widths: '375, 550, 750, 1100, 1500, 1780, 2000, 3000'
-      }}
-    {%- else -%}
-      <img
-        src="{{ 'content1.jpg' | asset_url }}"
-        alt="Large Image"
-        loading="lazy"
-        width="1920"
-        height="1080"
-      >
-    {%- endif -%}
-  </div>
 </div>
 
 {% schema %}
 {
-  "name": "Large Image & Manifesto",
+  "name": "Manifesto Section",
   "settings": [
     {
       "type": "header",
@@ -110,30 +84,11 @@
       "type": "url",
       "id": "link_url",
       "label": "Link URL"
-    },
-    {
-      "type": "header",
-      "content": "Large Image"
-    },
-    {
-      "type": "image_picker",
-      "id": "image",
-      "label": "Image"
-    },
-    {
-      "type": "range",
-      "id": "image_height",
-      "min": 50,
-      "max": 200,
-      "step": 10,
-      "unit": "vh",
-      "label": "Image Height",
-      "default": 150
     }
   ],
   "presets": [
     {
-      "name": "Large Image & Manifesto"
+      "name": "Manifesto Section"
     }
   ]
 }
