--- a/sections/middle-image-section.liquid
+++ b/sections/middle-image-section.liquid
@@ -9,7 +9,7 @@
         loading: 'lazy',
         class: 'middle-centered-image',
         widths: '375, 550, 750, 1100, 1500, 1780, 2000, 3000',
-        sizes: '(min-width: 1000px) 100vw, 100vw'
+        sizes: '(max-width: 768px) 80vw, 50vw'
     }}
   {%- else -%}
     <img
